--- a/default/macros.conf
+++ b/default/macros.conf
@@ -1,7 +1,7 @@
 [search_head_backup_index]
-definition = main
+definition = "main"
 iseval = 0
 
 [search_head_backup_host]
-definition = null()
+definition = splunk_server
 iseval = 0
