--- a/default/savedsearches.conf
+++ b/default/savedsearches.conf
@@ -5,11 +5,7 @@ dispatch.earliest_time = -1s
 dispatch.latest_time = now
 request.ui_dispatch_app = search_head_backup
 request.ui_dispatch_view = search_head_backup
-search = | rest splunk_server=local /services/apps/local count=0 search=visible=1\
-| eval x=1, host=coalesce(`search_head_backup_host`,splunk_server)\
-| fields title host x\
-| join max=0 x [| inputlookup search_head_backup_targets.csv | eval x=1]\
-| eval uri="/servicesNS/nobody/".title."/".target\
-| map search="| rest splunk_server=local $uri$ count=0 search=eai:acl.app=$title$ | eval label=\"$label$\" | tojson | fields _raw\
-| collect index=`search_head_backup_index` host=$host$ sourcetype=json_no_timestamp source=$uri$" maxsearches=1000
-
+search = | inputlookup search_head_backup_targets.csv\
+| eval host=coalesce(`search_head_backup_host`,splunk_server), uri="/servicesNS/nobody/-/".target\
+| map maxsearches=1000 search="| rest splunk_server=local $uri$ count=0 | eval label=\"$label$\" | tojson | fields _raw\
+| collect index=`search_head_backup_index` host=$host$ sourcetype=json_no_timestamp source=$uri$" 
