--- a/default/savedsearches.conf
+++ b/default/savedsearches.conf
@@ -5,7 +5,4 @@ dispatch.earliest_time = -1s
 dispatch.latest_time = now
 request.ui_dispatch_app = search_head_backup
 request.ui_dispatch_view = search_head_backup
-search = | inputlookup search_head_backup_targets.csv\
-| eval host=coalesce(`search_head_backup_host`,splunk_server), uri="/servicesNS/nobody/-/".target\
-| map maxsearches=1000 search="| rest splunk_server=local $uri$ count=0 | eval label=\"$label$\" | tojson | fields _raw\
-| collect index=`search_head_backup_index` host=$host$ sourcetype=json_no_timestamp source=$uri$" 
+search = | inputlookup search_head_backup_targets.csv | map maxsearches=1000 search="| rest splunk_server=local /servicesNS/nobody/-/$target$ count=0 | eval label=\"$label$\" | tojson | fields _raw | collect index=`search_head_backup_index` host=`search_head_backup_host` sourcetype=json_no_timestamp source=/servicesNS/nobody/-/$target$"
